# QtQuick-cheesePlayer

CheesePlayer/: AppFunctions.qml  AppMenuBar.qml  AppSideBar.qml  CMakeLists.txt  PageAbout.qml  PageMediaPlayer.qml  Theme.qml  main.cpp  main.qml  resources.qrc
CheesePlayer/code/include/other/network/: network.h
CheesePlayer/code/src/other/network/: network.cpp  network_slots.cpp
